# ProductivityFlow

./: .gitignore  BACKEND_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_FIXES_FINAL.md  DEVELOPER_CODES.md  INSTALLER_IMPROVEMENTS.md  INSTALLER_README.md  MANUAL_DEPLOYMENT_GUIDE.md  PRODUCTION_READY_SUMMARY.md  PRODUCTIVITYFLOW_DEBUG_FIX_SUMMARY.md  Procfile  ProductivityFlow_Fixes_Summary.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  RAILWAY_DEPLOYMENT_FIXES.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_SUMMARY.md  RAILWAY_MIGRATION_SUMMARY.md  README.md  REDIS_FIX_INSTRUCTIONS.md  SAAS_UPGRADE_SUMMARY.md  SETUP_GUIDE.md  SOFTWARE_ALIGNMENT_SUMMARY.md  TAURI_SIGNING_FIX.md  anthropic_httpx_compatibility_fix.md  backend_fixes_summary.md  build-installer.sh  build-unified-installer.sh  create_test_credentials.py  deploy_railway_fixes.sh  deploy_to_railway.sh  diagnose_git.sh  fix_git_issue.sh  flask_before_first_request_fix.md  generate_dev_codes.sh  generate_railway_env.py  github_actions_upload_asset_fix.md  public_key_verification.md  railway.json  railway.toml  railway_env_vars.txt  render.yaml  (+7 more)
.github/workflows/: release-installers.yml
backend/: Procfile  app.py  application.py  check_db_schema.py  generate_encryption_key.py  gunicorn.conf.py  migrate_database.py  requirements.txt  setup_dev_data.py  start.py  test_server.py
backend/.ebextensions/: python.config
desktop-tracker/: index.html  package-lock.json  package.json  vite.config.js
desktop-tracker/src/: App.jsx
desktop-tracker/src/components/: EmployeeTracker.jsx  MainTrackingView.jsx  OnboardingView.jsx
employee-tracker-tauri/: index.html  package-lock.json  package.json
employee-tracker-tauri/src/: App.tsx
employee-tracker-tauri/src-tauri/: Cargo.toml  tauri.conf.json
employee-tracker-tauri/src-tauri/icons/: icon.icns
employee-tracker-tauri/src-tauri/src/: main.rs  system_monitor.rs
employee-tracker-tauri/src/components/: ErrorBoundary.tsx  OnboardingView.tsx  TrackingView.tsx
installer/: package.json
installer/assets/: create-placeholder-assets.sh
installer/scripts/: create-installer-app.sh
manager-dashboard-tauri/: index.html  package-lock.json  package.json
manager-dashboard-tauri/src/: App.tsx
manager-dashboard-tauri/src-tauri/: Cargo.toml  tauri.conf.json
manager-dashboard-tauri/src-tauri/icons/: icon.icns
manager-dashboard-tauri/src-tauri/src/: main.rs
manager-dashboard-tauri/src/components/: EmployeeSummaryModal.tsx  ErrorBoundary.tsx  Sidebar.tsx
manager-dashboard-tauri/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx
manager-dashboard-tauri/src/pages/: Billing.tsx  Compliance.tsx  Dashboard.tsx  TeamManagement.tsx
web-dashboard/: index.html  package-lock.json  package.json  vite.config.js
web-dashboard/src/: App.jsx  main.jsx
web-dashboard/src/components/: EmployeeSummaryModal.jsx  Sidebar.jsx
web-dashboard/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Progress.jsx
web-dashboard/src/pages/: Compliance.jsx  Dashboard.jsx  TeamManagement.jsx
