[package]
name = "manager-dashboard-tauri"
version = "0.1.0"
description = "ProductivityFlow Manager Dashboard"
authors = ["ProductivityFlow"]
license = ""
repository = ""
default-run = "manager-dashboard-tauri"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "system-tray"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]